--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,11 @@ security:
             login_throttling:
                 max_attempts: 3
                 interval: '15 minutes'
+            custom_authenticator: App\Security\UserAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
 
             # activate different ways to authenticate
@@ -36,5 +41,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/statistics, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
